# BankAppQt

./: .gitignore  CMakeLists.txt
Learning/: learning.md
include/: Qt_DB_Utils.hpp  login_signup.hpp  pch.hpp
src/: Qt_DB_Utils.cpp  login_signup.cpp  main.cpp
